# MultiBiOS

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
config/: example_protocol.yaml  hardware.yaml  short_protocol.yaml
contributing/: index.html
docs/: contributing.md  faq.md  firmware.md  hardware.md  index.md  logging.md  protocol.md  runner.md  safety.md  timing.md  troubleshooting.md  validation.md  visualization.md  wiring.md
faq/: index.html
firmware/: index.html
firmware/teensy41/src/: v0.ino
hardware/: index.html
logging/: index.html
multibios/: __init__.py  run_protocol.py  viz_helpers.py  viz_protocol.py
multibios/protocol/: __init__.py  schema.py
protocol/: index.html
rig/electrical/SerialOlfactometerController/: SerialOlfactometerController.kicad_pcb  SerialOlfactometerController.kicad_pro  SerialOlfactometerController.kicad_sch  SerialOlfactometerController.round-tracks-config  fp-lib-table  sym-lib-table
rig/electrical/SerialValveController/: SerialValveController.kicad_pcb  SerialValveController.kicad_pro  SerialValveController.kicad_sch  fp-lib-table  sym-lib-table
rig/electrical/TeensyOpenLoop/: TeensyOpenLoop.kicad_pcb  TeensyOpenLoop.kicad_pro  (+3 more)
runner/: index.html
safety/: index.html
search/: search_index.json
stylesheets/: extra.css
tests/: README.md  hardware_test.py  quick_test_examples.ps1  quick_test_examples.sh  simple_test.py
timing/: index.html
troubleshooting/: index.html
validation/: index.html
visualization/: index.html
wiring/: index.html
(+42 files in other folders)
